# test-mq

./: .gitignore  ENTREGABLES.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  manage.py  pyproject.toml
backend/config/: settings.py  urls.py
backend/tasks/: models.py  serializers.py  urls.py  views.py
backend/tasks/management/commands/: seed.py
backend/tasks/migrations/: 0001_initial.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/components/: BankMovementForm.tsx  CollectionForm.tsx  CollectionList.tsx  PaymentForm.tsx
frontend/src/lib/: api.ts  global-styles.ts  styled-components-registry.tsx  types.ts
